# w3e-research-public

./: .env.sample  CLAUDE.md  README.md  pyproject.toml
src/apps/pre_resolution_analysis/: INPUT.md  README.md  analyze_strategy.py  dashboard.py  quick_test.py  test_analyze_strategy.py
src/apps/pumpfun_sniper_analysis/: IMPLEMENTATION.md  INPUT.md  README.md  analyze_snipers.py  dashboard.py  run.sh  test_analyze_snipers.py
src/apps/upcoming_events/: INPUT.md  README.md  __init__.py  dashboard.py  get_upcoming_events.py  test_get_upcoming_events.py
src/core/: clickhouse.py  environment.py
